<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.details.DetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/details_flight"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/carrier_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@id/details_departure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>


    <TextView
        android:id="@+id/details_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_x"
        android:layout_marginTop="@dimen/margin_x"
        android:text="@string/iata_departure"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carrier_logo">

    </TextView>

    <ImageView
        android:id="@+id/imageView_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_toStartOf="@+id/details_arrival"
        android:background="@drawable/arrow_vector"
        app:layout_constraintBottom_toBottomOf="@+id/details_departure"
        app:layout_constraintEnd_toStartOf="@id/details_arrival"
        app:layout_constraintStart_toEndOf="@id/details_departure"
        app:layout_constraintTop_toTopOf="@+id/details_departure" />

    <TextView
        android:id="@+id/details_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_x"
        android:layout_marginTop="@dimen/margin_x"
        android:text="@string/iata_arrival"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/date_arrival_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carrier_logo" />

    <TextView
        android:id="@+id/time_departure_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/time_departure"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_departure_details"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_xx"/>

    <TextView
        android:id="@+id/time_arrival_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_xx"
        android:text="@string/time_arrival"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_arrival_details" />

    <TextView
        android:id="@+id/date_departure_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_xx"
        android:text="@string/date_departure"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_departure" />

    <TextView
        android:id="@+id/date_arrival_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_xx"
        android:text="@string/date_arrival"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_arrival" />

    <TextView
        android:id="@+id/duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_xx"
        android:text="@string/duration_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_departure_details" />

    <TextView
        android:id="@+id/duration_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/duration_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/duration_text"
        app:layout_constraintTop_toBottomOf="@id/time_departure_details" />

    <TextView
        android:id="@+id/stop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_xx"
        android:text="@string/stop_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration_text" />

    <TextView
        android:id="@+id/stops_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/stops_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/stop_text"
        app:layout_constraintTop_toBottomOf="@id/duration_info"/>

</androidx.constraintlayout.widget.ConstraintLayout>